latest block time from scribe
